--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body
 {
-overflow-y:hidden;
+    overflow-y:hidden;
+
 }
 
 
@@ -15,6 +16,46 @@ overflow-y:hidden;
 }
 #inner-message {
     margin: 0 auto;
+}
+
+/* div content wrapper */
+div#div-content {
+
+}
+
+form#form-question-data {
+    padding: 25px 25px 5px;
+    font-size: 135%;
+}
+input[type=text], input[type=date] {
+    padding: 10px;
+    width: 100%;
+    text-align: center;
+    font-size: 160%;
+}
+
+textarea {
+    padding: 10px;
+    width: 100%;
+    height: 250px;
+    text-align: justify;
+    resize: none;
+
+}
+
+input[type=checkbox], input[type=radio]
+{
+    /* Double-sized Checkboxes */
+    -ms-transform: scale(2.5); /* IE */
+    -moz-transform: scale(2.5); /* FF */
+    -webkit-transform: scale(2.5); /* Safari and Chrome */
+    -o-transform: scale(2.5); /* Opera */
+    padding: 10px;
+    border: 1px solid gray;
+}
+/* question divs */
+div#div-question-container {
+    border-radius: 15px;
 }
 
 
